Fix footer logo layout on mobile

--- a/components/Footer/Footer.module.css
+++ b/components/Footer/Footer.module.css
@@ -19,5 +19,11 @@
     align-items: center;
     display: flex;
     gap: 2rem;
+    justify-content: center;
+}
+
+@media (min-width: 768px) {
+  .Footer-logos {
     justify-content: end;
+  }
 }
